@@ -1,5 +1,5 @@
 setMethod("show",
           signature(object = "PlainTextDocument"),
           function(object){
-              cat(Corpus(object), "\n")
+              print(Corpus(object))
     })
