@@ -11,6 +11,8 @@ Objects can be created by calls of the form \code{new("CSVSource", ...)}.
 }
 \section{Slots}{
   \describe{
+    \item{\code{DefaultReader}:}{Object of class \code{function}
+      describing a default reader}
     \item{\code{URI}:}{Object of class \code{character} describing the
       connection call to be made for accessing the document physically}
     \item{\code{Content}:}{Object of class \code{character} holding the
