@@ -1,17 +1,20 @@
 \name{show-methods}
 \docType{methods}
 \alias{show-methods}
+\alias{show,PlainTextDocument-method}
 \alias{show,TextDocCol-method}
 \alias{show,TextRepository-method}
 \title{Methods for Function show in Package `tm'}
 \description{
-Methods for function \code{show} in package \pkg{tm}.
+  Methods for function \code{show} in package \pkg{tm}.
 }
 \section{Methods}{
-\describe{
-
-\item{object = "TextDocCol"}{Prints a short description of \code{object}.}
-
-\item{object = "TextRepository"}{Prints a short description of \code{object}.}
+  \describe{
+    \item{object = "PlainTextDocument"}{Prints the text of a plain text
+      document without all slots.}
+    \item{object = "TextDocCol"}{Prints some short information on a text
+      document collection.}
+    \item{object = "TextRepository"}{Prints some short information on a text
+      repository.}
 }}
 \keyword{methods}
